// Copyright 2020 PingCAP, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package chaosstress;

import "google/protobuf/empty.proto";

service ChaosStress {
    rpc ExecStressors (StressRequest) returns (StressResponse) {
    }
    rpc CancelStressors (StressRequest) returns (google.protobuf.Empty) {
    }
}

message StressRequest {
    string uuid = 1;
    string stressors = 2;
}

message StressResponse {
    string uuid = 1;
}


